; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/target/extr_admin-cmd.c_nvmet_execute_get_log_page_error.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/target/extr_admin-cmd.c_nvmet_execute_get_log_page_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvmet_req = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.nvmet_ctrl* }
%struct.nvmet_ctrl = type { i64, i32, i32* }

@NVMET_ERROR_LOG_SLOTS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvmet_req*)* @nvmet_execute_get_log_page_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvmet_execute_get_log_page_error(%struct.nvmet_req* %0) #0 {
  %2 = alloca %struct.nvmet_req*, align 8
  %3 = alloca %struct.nvmet_ctrl*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.nvmet_req* %0, %struct.nvmet_req** %2, align 8
  %8 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %9 = getelementptr inbounds %struct.nvmet_req, %struct.nvmet_req* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %11, align 8
  store %struct.nvmet_ctrl* %12, %struct.nvmet_ctrl** %3, align 8
  store i32 0, i32* %5, align 4
  %13 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %14 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %13, i32 0, i32 1
  %15 = load i64, i64* %4, align 8
  %16 = call i32 @spin_lock_irqsave(i32* %14, i64 %15)
  %17 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %18 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* @NVMET_ERROR_LOG_SLOTS, align 8
  %21 = urem i64 %19, %20
  store i64 %21, i64* %6, align 8
  store i64 0, i64* %7, align 8
  br label %22

22:                                               ; preds = %51, %1
  %23 = load i64, i64* %7, align 8
  %24 = load i64, i64* @NVMET_ERROR_LOG_SLOTS, align 8
  %25 = icmp ult i64 %23, %24
  br i1 %25, label %26, label %54

26:                                               ; preds = %22
  %27 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %28 = load i32, i32* %5, align 4
  %29 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %30 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %29, i32 0, i32 2
  %31 = load i32*, i32** %30, align 8
  %32 = load i64, i64* %6, align 8
  %33 = getelementptr inbounds i32, i32* %31, i64 %32
  %34 = call i64 @nvmet_copy_to_sgl(%struct.nvmet_req* %27, i32 %28, i32* %33, i32 4)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %26
  br label %54

37:                                               ; preds = %26
  %38 = load i64, i64* %6, align 8
  %39 = icmp eq i64 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %37
  %41 = load i64, i64* @NVMET_ERROR_LOG_SLOTS, align 8
  %42 = sub i64 %41, 1
  store i64 %42, i64* %6, align 8
  br label %46

43:                                               ; preds = %37
  %44 = load i64, i64* %6, align 8
  %45 = add i64 %44, -1
  store i64 %45, i64* %6, align 8
  br label %46

46:                                               ; preds = %43, %40
  %47 = load i32, i32* %5, align 4
  %48 = sext i32 %47 to i64
  %49 = add i64 %48, 4
  %50 = trunc i64 %49 to i32
  store i32 %50, i32* %5, align 4
  br label %51

51:                                               ; preds = %46
  %52 = load i64, i64* %7, align 8
  %53 = add i64 %52, 1
  store i64 %53, i64* %7, align 8
  br label %22

54:                                               ; preds = %36, %22
  %55 = load %struct.nvmet_ctrl*, %struct.nvmet_ctrl** %3, align 8
  %56 = getelementptr inbounds %struct.nvmet_ctrl, %struct.nvmet_ctrl* %55, i32 0, i32 1
  %57 = load i64, i64* %4, align 8
  %58 = call i32 @spin_unlock_irqrestore(i32* %56, i64 %57)
  %59 = load %struct.nvmet_req*, %struct.nvmet_req** %2, align 8
  %60 = call i32 @nvmet_req_complete(%struct.nvmet_req* %59, i32 0)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @nvmet_copy_to_sgl(%struct.nvmet_req*, i32, i32*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @nvmet_req_complete(%struct.nvmet_req*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
